Tue Apr  8 21:38:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (lock_func): optimized.  based on a patch from Sylvain
	  Joyeux in [ruby-Patches-19362].

	* thread.c (rb_mutex_sleep): ensures to re-acquire at waking up.
	  [ruby-Patches-19361]

Tue Apr  8 11:00:14 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/complex.rb: remove Math first before overwriting by CMath.

Tue Apr  8 10:34:10 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* load.c (rb_require_safe): should check fname path after $SAFE is
	  properly set.  [ruby-dev:34268]

	* re.c (rb_reg_quote): should always copy the quoting string.
	  [ruby-core:16235]

Tue Apr  8 10:30:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (prelude.c): depends on enc/prelude.rb.

	* enc/prelude.rb: fixed initial library names.

Tue Apr  8 03:39:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_provided): check expanded path for relative path
	  features, loading or loaded features are already expanded in 1.9.

	* variable.c (rb_autoload_load): no needs to check if provided before
	  rb_require_safe.  [ruby-dev:34266]

Mon Apr  7 22:41:21 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: cancelled recent changes (except to remove rdiv).

	* bignum.c: ditto.

	* bignum.c: added rb_big_idiv.

Mon Apr  7 15:51:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_init_db): moved to enc/encdb.c.

	* transcode.c (init_transcoder_table): moved to enc/trans/transdb.c.

	* enc/depend (enc/encdb.o enc/trans/transdb.o): depend on
	  corresponding headers.

	* common.mk (COMMONOBJS): moved transcode.o from OBJS

Mon Apr  7 12:26:32 2008  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb: add a known-bug.

Mon Apr  7 12:15:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_each_func): should not leave a variable
	  uninitialized, which could cause SEGV.

	* range.c (range_step): removed duplicated and unreachable code.
